Clean up JS, add Help icon, update readme

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Texter</title>
-    <link rel="stylesheet" href="css/style.css">
+	<title>Clueless Texter</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="js/resources.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/engine.js"></script>
-</body>
-</html>
+	<a href="https://github.com/cloverhub/texter-game" target="_blank"><img class="img-info" src="images/help.png">
+	<script src="js/resources.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/engine.js"></script>
