--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<a href="https://github.com/cloverhub/texter-game" target="_blank"><img class="img-info" src="images/help.png">
-	<script src="js/resources.js"></script>
+	<script src="js/resources.min.js"></script>
 	<script src="js/app.js"></script>
-	<script src="js/engine.js"></script>
+	<script src="js/engine.min.js"></script>
