--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<a href="https://github.com/cloverhub/texter-game" target="_blank"><img class="img-info" src="images/help.png">
+	<a href="https://github.com/cloverhub/texter-game" target="_blank"><img class="info" src="images/help.png" alt="More information" title="More information">
 	<script src="js/resources.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/engine.min.js"></script>
