--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Clueless Texter</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<a href="https://github.com/cloverhub/texter-game" target="_blank"><img class="info" src="images/help.png" alt="More information" title="More information">
+	<a href="https://github.com/cloverhub/texter-game" target="_blank"><img class="info" src="images/help.png" alt="More information" title="More information"></a>
 	<script src="js/resources.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/engine.min.js"></script>
+</body>
